<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/caissa_logofondo2"
    tools:context="com.telefonica.first.tableroprueba.Login">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lineartitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:text="@string/identificate"
                android:textColor="#1454a1" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"

            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="#eb66a0"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#c9e8e6"
                android:ems="9"
                android:hint="@string/hinttuemail"
                android:inputType="textEmailAddress"
                android:textColor="#1454a1"
                android:textColorHint="#6dc9c7"

                android:textSize="16dp" />


            <TextView
                android:id="@+id/tvTexto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                android:text="@string/password"
                android:textColor="#eb66a0"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/etTexto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:background="#c9e8e6"
                android:ems="9"
                android:hint="@string/hinttupassword"
                android:inputType="textPassword"
                android:textColor="#1454a1"
                android:textColorHint="#6dc9c7"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="95dp"
                android:layout_weight="1"
                android:background="#1454a1"
                android:text="@string/btidentificate"
                android:textColor="#fff" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>